[FB] Vertical Tab | Fix website resizing when hovering over collapsed tab bar in macos

--- a/browser/themes/designs/options/native-verticaltab-hover.css
+++ b/browser/themes/designs/options/native-verticaltab-hover.css
@@ -43,6 +43,16 @@
   }
 }
 
+@media (-moz-platform: macos) {
+  #TabsToolbar {
+    margin-right: 20px;
+  }
+  
+  #appcontent {
+    margin-left: -20px;
+  }
+}
+
 @media (-moz-platform: linux) {
   #TabsToolbar:-moz-lwtheme {
     background-color: var(--lwt-accent-color) !important;
